Use the correct ZGenerational collector